refactor: Resolve deprecation of Class#newInstance (#434)
Replace Class#newInstance() by Class#getDeclaredConstructor().newInstance()

Catch additional exceptions and collapse exceptions catches with equal body.

related to #144