@@ -16,6 +16,7 @@
  */
 package org.operaton.bpm.engine.impl.form.validator;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.HashMap;
 import java.util.Map;
 
@@ -92,14 +93,9 @@ public class FormValidators {
 
   protected FormFieldValidator createValidatorInstance(Class<? extends FormFieldValidator> validator) {
     try {
-      return validator.newInstance();
-
-    } catch (InstantiationException e) {
+      return validator.getDeclaredConstructor().newInstance();
+    } catch (InstantiationException | NoSuchMethodException | InvocationTargetException | IllegalAccessException e) {
       throw new ProcessEngineException("Could not instantiate validator", e);
-
-    } catch (IllegalAccessException e) {
-      throw new ProcessEngineException("Could not instantiate validator", e);
-
     }
   }
 
